--- a/Stylesheets/styles.css
+++ b/Stylesheets/styles.css
@@ -101,10 +101,24 @@ footer {
     margin-bottom: 10px;
 }
 
+
+
 /* Profile Section Styles */
-#profile-section {
-    flex: 0.2; /* Occupy available space */
-    margin-right: 20px; /* Add some spacing between the divs */
+
+/* Adjust flex value for browsers with a minimum width of 768px */
+@media screen and (min-width: 768px) {
+    #profile-section {
+        flex: 0.2; /* Adjust the flex value for browsers */
+        margin-right: 20px; /* Add some spacing between the divs */
+    }
+}
+
+/* Adjust flex value for mobile devices with a maximum width of 767px */
+@media screen and (max-width: 767px) {
+    #profile-section {
+        flex: 0.7; /* Adjust the flex value for mobile devices */
+        margin-right: 20px; /* Add some spacing between the divs */
+    }
 }
 
 #profile-picture {
