redesign the website look and feel

--- a/Stylesheets/resumestyles.css
+++ b/Stylesheets/resumestyles.css
@@ -1,20 +1,28 @@
 /* styles.css - Version 3 */
 
 body {
-    font-family: Georgia;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
-    margin: 0; /* Resetting default margin */
+    background-color: #fff;
+    margin: 0;
+    padding: 0;
 }
 
-header {
-    background-color: #007bff;
+header, footer {
+    background-color: #37474f;
     color: #fff;
     padding: 20px;
     text-align: center;
 }
-
+main {
+    margin: 20px;
+    padding: 20px;
+}
 header h1 {
     color: #fff;
+}
+
+#name {
     margin: 0;
 }
 #name, #job-title {
@@ -32,18 +40,12 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #42a5f5;
     text-decoration: none;
 }
 
 nav ul li a:hover {
-    text-decoration: underline;
-}
-
-
-h1 {
-    color: #060707;
-    margin: 0;
+    text-decoration: none;
 }
 
 address {
@@ -56,9 +58,7 @@ address a {
     text-decoration: none;
 }
 
-main {
-    padding: 20px;
-}
+
 
 h2 {
     margin-top: 20px;
@@ -78,9 +78,3 @@ h2 {
     margin-top: 5px;
 }
 
-footer {
-    background-color: #007bff;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-}
