--- a/Stylesheets/resumestyles.css
+++ b/Stylesheets/resumestyles.css
@@ -7,7 +7,22 @@ body {
     margin: 0;
     padding: 0;
 }
+.circle-container {
+    position: absolute;
+    top: 20px;
+    left: 100px;
+    width: 120px; /* Adjust the size of the circle as needed */
+    height: 120px; /* Adjust the size of the circle as needed */
+    border-radius: 50%; /* Makes the container circular */
+    overflow: hidden; /* Hides overflow content */
+    border: 4px solid rgb(91, 39, 39); /* Adds a thick red border */
+}
 
+.profile-picture {
+    width: 100%; /* Makes the image fill the container */
+    height: 100%; /* Makes the image fill the container */
+    object-fit: cover; /* Scales the image to cover the container */
+}
 header, footer {
     background-color: #37474f;
     color: #fff;
@@ -36,7 +51,13 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin-right: 20px;
+}
+
+nav ul li:not(:last-child)::after {
+    content: '\2022'; /* Unicode character for a bullet point */
+    margin-left: 10px;
+    margin-right: 7px; /* Adjust the spacing between the menu item and the dot */
+    color: black; /* Color of the dot */
 }
 
 nav ul li a {
