--- a/Stylesheets/resumestyles.css
+++ b/Stylesheets/resumestyles.css
@@ -18,6 +18,20 @@ body {
     border: 4px solid rgb(91, 39, 39); /* Adds a thick red border */
 }
 
+@media only screen and (max-width: 600px) {
+    .circle-container {
+        width: 80px; /* Adjusted size for smaller screens */
+        height: 80px; /* Adjusted size for smaller screens */
+        top: 10px; /* Adjusted position for smaller screens */
+        left: 50%; /* Adjusted for centering horizontally */
+        transform: translateX(-50%); /* Centering horizontally */
+    }
+
+    header {
+        margin-top: 120px;
+    }
+}
+
 .profile-picture {
     width: 100%; /* Makes the image fill the container */
     height: 100%; /* Makes the image fill the container */
