--- a/Stylesheets/resumestyles.css
+++ b/Stylesheets/resumestyles.css
@@ -114,3 +114,53 @@ h2 {
     margin-top: 5px;
 }
 
+/* Footer Styles */
+.contact_two_columns {
+    display: flex;
+    flex: 0 0 50%;
+    flex-direction: row;
+    list-style: none;
+    padding: 10px;
+    padding-left: 30px;
+}
+.contact_info_column {
+    display: flex;
+    flex: 0 0 50%;
+    flex-direction: column;
+    text-align: left;
+}
+
+.contact_info_column ul {
+    margin-top: 36px;
+    list-style: none;
+}
+
+.contact_info_column li {
+    margin-bottom: 10px;
+}
+.contact_info_column img {
+    height: 20px;
+    width: 20px;
+    margin-right: 10px;
+}
+
+/* Styles for the scroll to top button */
+.up-arrow-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
+  
+  .up-arrow-container img:hover {
+    transform: scale(1.2);
+    transition: 0.3s ease;
+
+  }
+  
+  .up-arrow-container img {
+    width: 100%;
+    height: 100%;
+  }
