--- a/Stylesheets/styles.css
+++ b/Stylesheets/styles.css
@@ -47,13 +47,18 @@ main {
     width: 40%;
     aspect-ratio: 1;
 }
-header, footer {
+header {
     background-color: #37474f;
     color: #fff;
     padding: 20px;
     text-align: center;
 }
-
+footer {
+    background-color: #37474f;
+    color: #B2BEB5;
+    padding: 20px;
+    text-align: center;
+}
 nav ul {
     list-style-type: none;
     margin: 0;
@@ -91,7 +96,6 @@ a {
 /* Footer Styles */
 .contact_two_columns {
     display: flex;
-    flex: 0 0 50%;
     flex-direction: row;
     list-style: none;
     padding: 10px;
@@ -99,7 +103,6 @@ a {
 }
 .contact_info_column {
     display: flex;
-    flex: 0 0 50%;
     flex-direction: column;
     text-align: left;
 }
@@ -107,6 +110,7 @@ a {
 .contact_info_column ul {
     margin-top: 36px;
     list-style: none;
+    color: #B2BEB5;
 }
 
 .contact_info_column li {
@@ -118,6 +122,12 @@ a {
     margin-right: 10px;
 }
 
+@media only screen and (max-width: 600px) {
+    .google_maps_column {
+        width: 150px;
+        height: 150px;
+    }
+}    
 /* Hover Effects */
 .project, .award, .certification {
     background-color: #424242;
@@ -152,6 +162,14 @@ a {
     border-radius: 50%;
   }
   
+  .up-arrow-container button {
+    padding: 0px;
+    border: none;
+    cursor: pointer;
+    appearance: none;
+    background-color: inherit;
+  }
+
   .up-arrow-container img:hover {
     transform: scale(1.2);
     transition: 0.3s ease;
@@ -179,7 +197,46 @@ a {
   }
 
   .column-institute-logo img {
-    width: 150px;
-    height: 150px;
+    width: 170px;
+    height: 170px;
   }
   
+  /*Resume Styles */
+
+address {
+    font-style: normal;
+    text-align: center;
+    margin-top: 10px;
+}
+
+address a {
+    text-decoration: none;
+}
+
+.job {
+    margin-bottom: 20px;
+}
+
+.job h3 {
+    margin-bottom: 5px;
+}
+
+.job p {
+    margin-top: 5px;
+}
+
+#name {
+    margin: 0;
+}
+#name, #job-title {
+    text-align: center;
+}
+
+.header{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#skills ul {
+    margin: 0;
+}
