--- a/Stylesheets/styles.css
+++ b/Stylesheets/styles.css
@@ -124,8 +124,9 @@ a {
 
 @media only screen and (max-width: 600px) {
     .google_maps_column {
-        width: 150px;
-        height: 150px;
+        width: 30%;
+        width: 75px;
+        height: 75px;
     }
 }    
 /* Hover Effects */
