--- a/Stylesheets/styles.css
+++ b/Stylesheets/styles.css
@@ -25,7 +25,7 @@ header {
     padding-bottom: 10px;
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     text-align: center;
     position: fixed;
     z-index: 999;
@@ -36,11 +36,11 @@ header {
 }
 
 header img {
-    width: 100px; /* Adjust the size of the circle as needed */
-    height: 100px; /* Adjust the size of the circle as needed */
+    width: 130px; /* Adjust the size of the circle as needed */
     border-radius: 50%; /* Makes the container circular */
     overflow: hidden; /* Hides overflow content */
     border: 4px solid rgb(91, 39, 39); /* Adds a thick red border */
+    margin-left: 30px;
 }
 
 
