--- a/Stylesheets/styles.css
+++ b/Stylesheets/styles.css
@@ -5,10 +5,10 @@ html {
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-height: 1.6;
-    background-color: #232323;
-    color: #fff;
+    font-family: Verdana;
+    line-height: 1.3;
+    background-color: #fff;
+    color: #333333;
     margin: 0;
     padding: 0;
 }
@@ -19,13 +19,13 @@ section {
     padding-top: 140px;
 }
 header {
-    background-color: rgb(55, 71, 79);
-    color: #fff;
+    background-color: #fff;
+    color: #333333;
     padding-top: 10px;
     padding-bottom: 10px;
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     text-align: center;
     position: fixed;
     z-index: 999;
@@ -33,13 +33,14 @@ header {
     right: 0;
     left: 0;
     align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 header img {
     width: 130px; /* Adjust the size of the circle as needed */
     border-radius: 50%; /* Makes the container circular */
     overflow: hidden; /* Hides overflow content */
-    border: 4px solid rgb(91, 39, 39); /* Adds a thick red border */
+    border: 4px solid #333333; /* Adds a thick red border */
     margin-left: 30px;
 }
 
@@ -53,46 +54,51 @@ header img {
 
 
 #menu li a {
-    color: #42a5f5;
+    color: #333333;
     text-decoration: none;
     font-size: 15px;
 }
 
 #menu li a:hover {
-    text-decoration: none;
+    text-decoration: underline;
 }
-
-
-a {
-    text-decoration: none;
-}
-
-
-
-
-@media only screen and (max-width: 600px) {
-    .circle-container {
-        width: 80px; /* Adjusted size for smaller screens */
-        height: 80px; /* Adjusted size for smaller screens */
-        top: 15px; /* Adjusted position for smaller screens */
-        left: 50%; /* Adjusted for centering horizontally */
-        transform: translateX(-50%); /* Centering horizontally */
-    }
-
-    header h1 {
-        padding-top: 60px;
-    }
-}
-
 
 
 footer {
-    background-color: #37474f;
-    color: #B2BEB5;
+    background-color: #fff;
+    color: #333333;
     padding: 20px;
     text-align: center;
+    
 }
 
+.footer-style {
+    display: flex;
+    justify-content: space-evenly;
+    text-align: left;
+    align-items: center;
+    width: 100%;
+}
+
+#footer-menu li {
+    list-style: none;
+    display: inline-block;
+    margin: 20px;
+}
+
+
+.footer-style img {
+    width: 50px;
+    height: 50px;
+}
+
+footer a {
+    color: #333333;
+}
+
+footer a:hover {
+    color: #333333;
+}
 
 /* Footer Styles */
 .contact_two_columns {
@@ -112,7 +118,7 @@ footer {
 .contact_info_column ul {
     margin-top: 36px;
     list-style: none;
-    color: #B2BEB5;
+    color: #333333;
 }
 
 .contact_info_column li {
@@ -146,7 +152,7 @@ footer {
 }
 /* Hover Effects */
 .project {
-    background-color: #424242;
+    background-color: #fff;
     border-radius: 8px;
     padding: 20px;
     margin-bottom: 20px;
@@ -155,11 +161,11 @@ footer {
 }
 
 .project a {
-    color: #0077CC;
+    color: #333333;
 }
 
 .project a:hover {
-    color: #42a5f5;
+    color: #333333;
 }
 
 
@@ -189,10 +195,10 @@ footer {
   }
   
   .column-institute-name a {
-    color: #fff;
+    color: #333333;
   }
 
   .column-institute-name a:hover {
-    color: #42a5f5;
+    color: #333333;
   }
 
