--- a/Stylesheets/styles.css
+++ b/Stylesheets/styles.css
@@ -11,12 +11,13 @@ body {
     color: #333333;
     margin: 0;
     padding: 0;
+    font-size: small;
 }
 main {
     margin: 20px;
 }
 section {
-    padding-top: 140px;
+    padding-top: 145px;
 }
 header {
     background-color: #fff;
@@ -25,7 +26,7 @@ header {
     padding-bottom: 10px;
     width: 100%;
     display: flex;
-    justify-content: start;
+    justify-content: center;
     text-align: center;
     position: fixed;
     z-index: 999;
@@ -41,7 +42,7 @@ header img {
     border-radius: 50%; /* Makes the container circular */
     overflow: hidden; /* Hides overflow content */
     border: 4px solid #333333; /* Adds a thick red border */
-    margin-left: 30px;
+    margin-left: 0;
 }
 
 
@@ -56,11 +57,105 @@ header img {
 #menu li a {
     color: #333333;
     text-decoration: none;
-    font-size: 15px;
+    font-size: small;
 }
 
 #menu li a:hover {
     text-decoration: underline;
+}
+
+/* Hamburger Menu Styles */
+.menu-container {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 10px;
+    left: 20px;
+}
+
+.hamburger-menu {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.hamburger-menu .line {
+    width: 30px;
+    height: 3px;
+    background-color: #333333;
+    margin: 4px 0;
+}
+
+.menu-container:hover .dropdown-menu {
+    display: flex;
+}
+
+.dropdown-menu {
+    display: none;
+    flex-direction: column;
+    background-color: #fff;
+    position: absolute;
+    top: 50px;
+    left: 20px;
+    width: 200px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.dropdown-menu li {
+    border-bottom: 1px solid #ddd;
+}
+
+.dropdown-menu li:last-child {
+    border-bottom: none;
+}
+
+.dropdown-menu a {
+    color: #333333;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-menu a:hover {
+    background-color: #f0f0f0;
+}
+
+/* Media Queries */
+
+@media (max-width: 940px) {
+    #menu {
+        display: none; /* Hide full menu on smaller screens */
+    }
+
+    .menu-container {
+        display: flex; /* Show hamburger menu on smaller screens */
+    }
+
+    header img {
+        margin-left: 0;
+    }
+}
+
+
+@media (min-width: 940px) {
+    .hamburger-menu {
+        display: none; /* Hide hamburger menu on larger screens */
+    }
+
+    #menu {
+        display: flex; /* Show full menu on larger screens */
+    }
+
+    .dropdown-menu {
+        display: none; /* Hide dropdown menu on larger screens */
+    }
 }
 
 
