make headings centered. And make text justified. Re-order projects and experience.

--- a/Stylesheets/styles.css
+++ b/Stylesheets/styles.css
@@ -18,6 +18,11 @@ main {
 }
 section {
     padding-top: 145px;
+    text-align: justify;
+}
+
+section h2 {
+    text-align: center;
 }
 header {
     background-color: #fff;
